--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,12 @@ on:
 env:
   RESUME_TARGET: release/resume.pdf
 
+permissions:
+  contents: write
+  pull-requests: write
+  issues: read
+  packages: none
+
 jobs:
   publish:
     runs-on: ubuntu-20.04
