Added CNAME file to the gh-pages to avoid reset of custom domain redirect

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -65,6 +65,7 @@ jobs:
           mkdir gh-pages
           cp release/resume.html gh-pages/index.html
           cp release/resume.pdf gh-pages/
+          echo "resume.govind.guru" > gh-pages/CNAME
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
