--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,10 +18,16 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "22.5.1"
+
+      - name: Use Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
       - name: Install requirements
         run: npm ci
